force-app/main/default/objects/Case/fields/Support_Feature__c.field-meta.xml
<CustomField>
    <fullName>Support_Feature__c</fullName>
    <label>Support Feature</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Support_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ExperienceCloud</fullName>
            </value>
            <value>
                <fullName>ServiceCloud</fullName>
            </value>
            <value>
                <fullName>Apex Support</fullName>
            </value>
            <value>
                <fullName>VF Support</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Express Routes</fullName>
            </value>
            <value>
                <fullName>Express Middleware</fullName>
            </value>
            <value>
                <fullName>CORS</fullName>
            </value>
            <value>
                <fullName>EC2</fullName>
            </value>
            <value>
                <fullName>IAM</fullName>
            </value>
            <value>
                <fullName>AWS Administration</fullName>
            </value>
            <value>
                <fullName>Spring App</fullName>
            </value>
            <value>
                <fullName>POJO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>