force-app/main/default/objects/Case/fields/Support_Product__c.field-meta.xml
<CustomField>
    <fullName>Support_Product__c</fullName>
    <label>Support Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>