force-app/main/default/objects/Case/listViews/URA_Main_Support_Case.listView-meta.xml
<ListView>
    <fullName>URA_Main_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>URA Main Support</label>
    <queue>URA_Main_Support</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>